sna: When reversing line-drawing direction, use the clipped endpoint

Make sure we take the clipping into account if we choose to reverse the
draw direction (to maintain left-to-right inside the box emission).

References: https://bugs.freedesktop.org/show_bug.cgi?id=46261
References: https://bugs.freedesktop.org/show_bug.cgi?id=45673
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>